--- a/Weather/src/main/resources/a4/tjobah/weather/weather-view.fxml
+++ b/Weather/src/main/resources/a4/tjobah/weather/weather-view.fxml
@@ -4,9 +4,10 @@
 <?import javafx.collections.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 
-<VBox prefHeight="500.0" prefWidth="500.0" spacing="20.0" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="a4.tjobah.weather.WeatherViewController">
+<VBox prefHeight="500.0" prefWidth="500.0" spacing="20.0" styleClass="vbox" stylesheets="@main.css" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="a4.tjobah.weather.WeatherViewController">
    <padding>
        <Insets bottom="20" left="20" right="20" top="20" />
    </padding>
@@ -20,7 +21,6 @@
         <rowConstraints>
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
             <Label text="Location" />
@@ -31,11 +31,72 @@
                     <FXCollections fx:factory="observableArrayList">
                         <String fx:value="Bakersfield,CA,USA" />
                         <String fx:value="Las Vegas,NV,USA" />
+                        <String fx:value="Kalispell,MT,USA" />
+                        <String fx:value="New York,NY,USA" />
+                        <String fx:value="Orlando,FL,USA" />
+                        <String fx:value="Yemen,YE" />
+
                     </FXCollections>
                 </items>
             </ComboBox>
             <Label fx:id="labLatitude" text="0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
             <Label fx:id="labLongitude" text="0" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+         </children>
+      </GridPane>
+      <GridPane>
+        <columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <Label text="Low:" />
+            <Label text="High:" GridPane.columnIndex="2" />
+            <Label text="Current:" GridPane.rowIndex="1" />
+            <Label text="Feels like:" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+            <Label text="Pressure" GridPane.rowIndex="2" />
+            <Label text="Humidity:" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+            <Label fx:id="labLow" text="0" GridPane.columnIndex="1" />
+            <Label fx:id="labHigh" text="0" GridPane.columnIndex="3" />
+            <Label fx:id="labCurrent" text="0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <Label fx:id="labFeelsLike" text="0" GridPane.columnIndex="3" GridPane.rowIndex="1" />
+            <Label fx:id="labPressure" text="0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <Label fx:id="labHumidity" text="0" GridPane.columnIndex="3" GridPane.rowIndex="2" />
+         </children>
+      </GridPane>
+      <GridPane>
+        <columnConstraints>
+          <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="100.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <ImageView fx:id="imgWeatherIcon" fitHeight="100.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="http://openweathermap.org/img/wn/01d@2x.png" />
+               </image>
+            </ImageView>
+            <Label fx:id="labWeatherDescription" text="Clear" GridPane.rowIndex="1" />
+            <ImageView fitHeight="100.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1">
+               <image>
+                  <Image url="@wind_bg_orange.png" />
+               </image>
+            </ImageView>
+            <ImageView fx:id="imgWindDirection" fitHeight="100.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1">
+               <image>
+                  <Image url="@wind_dir_orange.png" />
+               </image>
+            </ImageView>
+            <Label fx:id="labWindSpeed" text="0 MPH" GridPane.columnIndex="1" GridPane.rowIndex="1" />
          </children>
       </GridPane>
    </children>
