--- a/JavaFXTodo/src/main/resources/a8/tjobah/javafxtodo/todo-view.fxml
+++ b/JavaFXTodo/src/main/resources/a8/tjobah/javafxtodo/todo-view.fxml
@@ -4,12 +4,15 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<VBox prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="a8.tjobah.javafxtodo.TodoController">
+<VBox prefHeight="400.0" prefWidth="600.0" stylesheets="@Default.css" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="a8.tjobah.javafxtodo.TodoController">
    <children>
       <TabPane fx:id="tabLists" maxHeight="35.0" tabClosingPolicy="UNAVAILABLE" VBox.vgrow="NEVER">
         <tabs>
           <Tab onSelectionChanged="#onTabChanged" text="Home" />
           <Tab onSelectionChanged="#onTabChanged" text="School" />
+            <Tab onSelectionChanged="#onTabChanged" text="Work" />
+            <Tab onSelectionChanged="#onTabChanged" text="Gym" />
+
         </tabs>
       </TabPane>
       <ListView fx:id="listItems" onMouseClicked="#onItemClicked" prefHeight="200.0" prefWidth="200.0" VBox.vgrow="ALWAYS" />
