--- a/pointOfSale/src/main/resources/a11/tjobah/pointofsale/list-view.fxml
+++ b/pointOfSale/src/main/resources/a11/tjobah/pointofsale/list-view.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<VBox prefHeight="700.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="a11.tjobah.pointofsale.ListViewController">
+<VBox prefHeight="700.0" prefWidth="1100.0" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="a11.tjobah.pointofsale.ListViewController">
    <children>
       <MenuBar>
         <menus>
@@ -65,7 +65,7 @@
             <Button maxHeight="60.0" maxWidth="60.0" minHeight="60.0" minWidth="60.0" mnemonicParsing="false" onAction="#onSaveItem" prefHeight="60.0" prefWidth="60.0" text="Save" GridPane.columnIndex="2" GridPane.rowIndex="2" />
          </children>
       </GridPane>
-      <ListView fx:id="itemsList" VBox.vgrow="ALWAYS">
+      <ListView fx:id="itemsList" style="-fx-font-family: monopause;" VBox.vgrow="ALWAYS">
          <padding>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </padding>
